--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-dj-database-url==0.4.1
-Django==1.9.7
-gunicorn==19.6.0
-psycopg2==2.6.2
-whitenoise==2.0.6
+Flask==0.12.2
+requests==2.14.2
+jason==0.1.7
