--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
+click==6.7
+et-xmlfile==1.0.1
 Flask==0.12.2
-requests==2.14.2
+itsdangerous==0.24
 jason==0.1.7
+jdcal==1.3
+Jinja2==2.9.6
+MarkupSafe==1.0
+openpyxl==2.4.6
+requests==2.14.2
+Werkzeug==0.12.2
