--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,5 @@ et-xmlfile==1.0.1
 Flask==0.12.2
 itsdangerous==0.24
 jason==0.1.7
-jdcal==1.3
-Jinja2==2.9.6
+line-bot-sdk == 1.5.0
 requests==2.14.2
