--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-click==6.7
-et-xmlfile==1.0.1
-Flask==0.12.2
-itsdangerous==0.24
-jason==0.1.7
-line-bot-sdk == 1.5.0
-requests==2.14.2
+line-bot-sdk
+flask
