--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,33 @@
-gspread
-oauth2client
-requests
-schedule
+asn1crypto==0.24.0
+cachetools==2.1.0
+certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
+cryptography==2.2.2
+django==1.11.6
+enum34==1.1.6
+et-xmlfile==1.0.1
+google-api-python-client==1.7.3
+google-auth==1.5.0
+google-auth-httplib2==0.0.3
+gspread==3.0.0
+httplib2==0.11.3
+idna==2.6
+image==1.5.16
+ipaddress==1.0.22
+jdcal==1.3
+oauth2client==4.1.2
+olefile==0.44
+openpyxl==2.5.0b1
+pillow==4.3.0
+pyasn1==0.4.3
+pyasn1-modules==0.2.1
+pycparser==2.18
+pyOpenSSL==18.0.0
+pytz==2017.2
+requests==2.18.4
+rsa==3.4.2
+schedule==0.5.0
+six==1.11.0
+uritemplate==3.0.0
+urllib3==1.22
